--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,3 +35,7 @@
 <div [innerHTML]="htmlContent"></div>
 
 <hr>
+
+<a [routerLink]="['/']">child</a>
+<a [routerLink]="['/child2']">child2</a>
+<router-outlet></router-outlet>
